# sentiment-tree-models

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: MODELS.md  RESULTS.md  USAGE.md
scripts/: train.py
src/sentiment_models/: __init__.py  data.py  models.py  training.py  utils.py  vocab.py
tests/: test_integration.py
