[build-system]
requires = ["setuptools>=42","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiment-tree-models"
version = "0.1.0"
description = "Neural sentiment classification models including Tree-LSTM for the Stanford Sentiment Treebank"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["sentiment-analysis", "nlp", "tree-lstm", "pytorch", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"Homepage" = "https://github.com/MohammadmahdiRahimi/sentiment-tree-models"
"Repository" = "https://github.com/MohammadmahdiRahimi/sentiment-tree-models"
"Bug Tracker" = "https://github.com/MohammadmahdiRahimi/sentiment-tree-models/issues"

[tool.setuptools.packages.find]
where = ["src"]

